atualização do porjeto

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	</div>
 
 	<div class="blink" id="screen"></div>
+
+	<button class="display"><i class="bi bi-display"></i></button>
 	
 	<button id="paraTrilha"><i class="bi bi-volume-up-fill"></i></button>
 	<button id="ativarTrilha"><i class="bi bi-volume-mute-fill"></i></button>
@@ -45,34 +47,34 @@
 	<section class="iphones" id="iphones">
 		
 		<div class="pratosProntos">
-			<div class="btnfechar">
-				<button class="fechar" id="fechar1">X</button>
-			</div>
 			
 			<div class="title">
 				<h1 class="title">Pratos prontos</h1>
 			</div>
 			<div id="iphone" class="iphone"></div>
 		</div>
+		<div class="btnfechar">
+			<button class="fechar" id="fechar1">X</button>
+		</div>
 		
 		<div class="bebidas">
-			<div class="btnfechar">
-				<button class="fechar" id="fechar2">X</button>
-			</div>
 			<div class="title">
 				<h1 class="title">Bebidas</h1>
 			</div>
-			<div class="ipad" id="ipad"></div>
+			<div class="Mac" id="Mac"></div>
+		</div>
+		<div class="btnfechar">
+			<button class="fechar" id="fechar2">X</button>
 		</div>
 		
 		<div class="legumes">
-			<div class="btnfechar">
-				<button class="fechar" id="fechar3">X</button>
-			</div>
 			<div class="title">
 				<h1 class="title">Pratos vegetarianos</h1>
 			</div>
-			<div class="Mac" id="Mac"></div>
+			<div class="ipad" id="ipad"></div>
+		</div>
+		<div class="btnfechar">
+			<button class="fechar" id="fechar3">X</button>
 		</div>
 	
 		<div class="Comprados" id="Comprados">
