--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		window.addEventListener('load', function () {
 			document.getElementById('preloader').style.display = 'none'
 		});
-		
 	</script>
 </head>
 <body>
@@ -61,10 +60,8 @@
 	<section class="iphones" id="iphones">
 		
 		<div class="pratosProntos">
+			<h1 class="title">Pratos prontos</h1>
 			
-			<div class="title">
-				<h1 class="title">Pratos prontos</h1>
-			</div>
 			<div id="iphone" class="iphone"></div>
 		</div>
 		<div class="btnfechar">
@@ -108,6 +105,7 @@
             }
         }
     </script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>
 	<script src="./js/script.js" type="module"></script>
 	<script src="./js/lista-produtos.js" type="module"></script>
 	<script src="js/abrirMenus.js"></script>
