--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
 	<title>Game | Loja</title>
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<script>
-		var reduzir = document.querySelector('.display')
-		window.addEventListener('load', function () {
-			document.getElementById('preloader').style.display = 'none'
-		});
-	</script>
+	<script src="js/preloader.js"></script>
 </head>
 <body>
 	<div id="preloader">
-		<div id="status">&nbsp;</div>
-		<div class="loader">
-			<span class="loader-pin"></span>
-			<span class="title">Carregando...</span>
-		</div>
+		<div id="loader"></div>
+		<div id="percentage">0%</div>
 	</div>
+
 	<div class="arrumarConfig">
 		<img src="./img/engrenagem.png" alt="config">
 	</div>
