--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<section class="iphones" id="iphones">
 		
 		<div class="pratosProntos">
-			<h1 class="title">Pratos prontos</h1>
+			<h1 class="title">Lanches</h1>
 			
 			<div id="iphone" class="iphone"></div>
 		</div>
@@ -73,9 +73,8 @@
 		
 		<div class="legumes">
 			<div class="title">
-				<h1 class="title">Pratos vegetarianos</h1>
+				<h1 class="title">correio</h1>
 			</div>
-			<div class="ipad" id="ipad"></div>
 		</div>
 		<div class="btnfechar">
 			<button class="fechar" id="fechar3">X</button>
@@ -98,7 +97,7 @@
             }
         }
     </script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>-->
 	<script src="./js/script.js" type="module"></script>
 	<script src="./js/lista-produtos.js" type="module"></script>
 	<script src="js/abrirMenus.js"></script>
