--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Olá pessoal finalizando mais um projeto pessoal, dessa vez juntei praticamente um jogo com website de portfólio, espero que gsotem">
+	<meta name="description" content="Olá pessoal finalizando mais um projeto pessoal, dessa vez juntei praticamente um jogo com website de ecommerce, espero que gsotem">
 	<meta name="author" content="João vitor gentil da silva">
 	<meta name="Keywords" content="Portfolio,portfolio,vercel,joao vitor,threejs, three-js,programação,css,html,javascript,python,js,php,acessar,algoritmo,algoritmos,ambiente digital,ambientes virtuais,animações,animações,digitais,aplicativo,avanços tecnológicos">
 	<meta name="robots" content="index,follow">
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script src="js/preloader.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>
 </head>
 <body>
 	<div id="preloader">
@@ -137,9 +138,8 @@
             }
         }
     </script>
-	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>-->
 	<script src="./js/script.js" type="module"></script>
 	<script src="./js/lista-produtos.js" type="module"></script>
-	<script src="js/abrirMenus.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
