--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 	</div>
 
 	<div class="blink" id="screen"></div>
-	
 
 	<div id="joystick">
 		<div id="stick"></div>
@@ -80,10 +79,10 @@
 			<div class="title">
 				<h1 class="title">Contate-me</h1>
 			</div>
-			<form id="contact-form" method="POST" action="https://formsubmit.co/joaopap1234@gmail.com"
+			<form id="contact-form" method="POST" action="https://formsubmit.co/me2803390@gmail.com"
 				enctype="multipart/form-data">
 				<input type="hidden" name="_captcha" value="false">
-				<input type="hidden" name="_next" value="http://127.0.0.1:5500">
+				<input type="hidden" name="_next" value="https://loja-animada-game.vercel.app/">
 			
 				<div class="input-box">
 					<div class="input-field">
