--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="author" content="João vitor gentil da silva">
 	<meta name="Keywords" content="Portfolio,portfolio,vercel,joao vitor,threejs, three-js,programação,css,html,javascript,python,js,php,acessar,algoritmo,algoritmos,ambiente digital,ambientes virtuais,animações,animações,digitais,aplicativo,avanços tecnológicos">
 	<meta name="robots" content="index,follow">
-	<title>Game | Loja</title>
+	<title>E-commerce | Game</title>
+	<link rel="shortcut icon" type="image/jpg" href="./img/logo.png" />
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script src="js/preloader.js"></script>
