--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<script src="js/preloader.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>
 </head>
 <body>
 	<div id="preloader">
