--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 	<link rel="shortcut icon" type="image/jpg" href="./img/logo.png" />
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<script src="js/preloader.js"></script>
+	<!--<script src="js/preloader.js"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>
 </head>
 <body>
+	<!--
 	<div id="preloader">
 		<div id="loader"></div>
 		<div id="percentage">0%</div>
 	</div>
+	-->
 
 	<div class="arrumarConfig">
 		<img src="./img/engrenagem.png" alt="config">
@@ -67,9 +69,7 @@
 		</div>
 		
 		<div class="bebidas">
-			<div class="title">
-				<h1 class="title">Bebidas</h1>
-			</div>
+			<h1 class="title">Bebidas</h1>
 			<div class="Mac" id="Mac"></div>
 		</div>
 		<div class="btnfechar">
@@ -77,9 +77,8 @@
 		</div>
 		
 		<div class="legumes">
-			<div class="title">
-				<h1 class="title">Contate-me</h1>
-			</div>
+			<h1 class="title">Contate-me</h1>
+
 			<form id="contact-form" method="POST" action="https://formsubmit.co/me2803390@gmail.com"
 				enctype="multipart/form-data">
 				<input type="hidden" name="_captcha" value="false">
