--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 	<link rel="shortcut icon" type="image/jpg" href="./img/logo.png" />
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<!--<script src="js/preloader.js"></script>-->
+	<script src="js/preloader.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r130/three.min.js"></script>
 </head>
 <body>
-	<!--
 	<div id="preloader">
 		<div id="loader"></div>
 		<div id="percentage">0%</div>
 	</div>
-	-->
 
 	<div class="arrumarConfig">
 		<img src="./img/engrenagem.png" alt="config">
@@ -133,8 +131,7 @@
             }
         }
     </script>
-	<script src="https://smtpjs.com/v3/smtp.js">
-	</script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 	<script src="./js/sendmail.js"></script>
 	<script src="./js/script.js" type="module"></script>
 	<script src="./js/lista-produtos.js" type="module"></script>
