--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Olá pessoal finalizando mais um projeto pessoal, dessa vez juntei praticamente um jogo com website de ecommerce, espero que gsotem">
 	<meta name="author" content="João vitor gentil da silva">
-	<meta name="Keywords" content="vercel,joao vitor,threejs, three-js,programação,css,html,javascript,python,js,php,acessar,algoritmo,algoritmos,ambiente digital,ambientes virtuais,animações,animações,digitais,aplicativo,avanços tecnológicos">
+	<meta name="Keywords" content="Portfolio,portfolio,vercel,joao vitor,threejs, three-js,programação,css,html,javascript,python,js,php,acessar,algoritmo,algoritmos,ambiente digital,ambientes virtuais,animações,animações,digitais,aplicativo,avanços tecnológicos">
 	<meta name="robots" content="index,follow">
 	<title>E-commerce | Game</title>
 	<link rel="shortcut icon" type="image/jpg" href="./img/logo.png" />
@@ -74,7 +74,7 @@
 			<button class="fechar" id="fechar2">X</button>
 		</div>
 		
-		<div class="legumes">
+		<div class="contatar">
 			<h1 class="title">Contate-me</h1>
 
 			<form id="contact-form" action="#">
@@ -135,6 +135,6 @@
 	<script src="./js/sendmail.js"></script>
 	<script src="./js/script.js" type="module"></script>
 	<script src="./js/lista-produtos.js" type="module"></script>
-	<script src="js/index.js"></script>
+	<script src="js/joystick.js"></script>
 </body>
 </html>
